add landing base styles

--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,32 +1,203 @@
 /* Contenedor principal */
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+#root {
+    width: 100vw;
+}
+
+
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    min-height: 100vh; 
+    width: 100vw; 
+    text-align: center;
+}
+
+/* Header */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
+    height: 100px;
+    /* padding-right: 500px; */
+    background-color: #f8f9fa; /* Color de fondo del header */
+    box-shadow: 0 6px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.header-right {
+    display: none;
+}
+
+/* Logo */
+.logo {
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    justify-content: center;
+}
+
+.logo-img {
+    height: 150px; /* Ajusta el tamaño del logo según sea necesario */
+}
+
+/* Navegación */
+.navbar {
+    display: none ;
+    align-items: stretch;
+    justify-content: space-between;
+    width: 600px; 
+}
+
+.nav-list {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+}
+
+.nav-link {
+    margin: 0 15px;
+    text-decoration: none;
+    font-size: 16px;
+    position: relative;
+    transition: color 0.3s;
+    color: #0A437D !important;
+}
+
+.nav-link:hover {
+    color: #1AB0D9 !important;
+}
+
+/* Efecto de animación para el enlace */
+.nav-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #1AB0D9;
+    transition: width 0.5s;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+}
+
+.nav-link:hover::after {
+    width: 100%;
+}
+
+.btn-start {
+    display: none;
+    padding: 10px 0px;
+    background-color: #ffffff;
+    color: #0A437D;
+    border: 1px solid #0A437D;
+    width: 150px;
+    border-radius: 5px;
+    transition: background-color 0.9s ;
+}
+
+.btn-start:hover {
+    background-color: #0A437D;
+    color: white;
+    border:none;
+}
+
+ 
+
+/* Contenido principal (ajustado para dejar espacio al header) */
+.main-content {
+    width: 100vw;
+}
+
+.main-content h1 {
+    font-size: 2rem;
+}
+
+#carousel {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#about {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center; 
+}
+
+#contact_us {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;  
+}
+
+footer {
+    display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh; /* Asegura que cubra toda la altura de la ventana */
+    background-color: #f8f9fa;
+    padding: 20px;
+    border-top: 1px solid #e7e7e7;
     text-align: center;
-    padding: 20px; /* Añade un poco de espacio alrededor del contenido */
+    position: fixed; /* Hace que el footer sea fijo al final de la página */
+    bottom: 0;
+    width: 100%;
 }
 
-/* Barra de navegación */
-.nav {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+footer p {
+    margin: 0;
+    font-size: 14px;
+    color: #6c757d;
 }
 
-/* Estilo del botón */
-.btn {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-}
+@media (min-width: 880px) {
+    .header {
+        height: 75px;
+    }
 
-.btn:hover {
-    background-color: #45a049;
+    .header-right {
+        display: flex;
+        justify-content: space-between; 
+        width: 70%;
+    }
+
+    .logo {
+        justify-content: start;
+        width: auto;
+    }
+
+    .logo-img {
+        height: 100px; /* Ajusta el tamaño del logo según sea necesario */
+    }
+    .btn-start{
+        display: inline-block;
+    }
+
+    .navbar {
+        display: flex;
+    }
+
+    .main-content {
+        width: 100vw;
+    }
+    
 }
