--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -5,6 +5,7 @@
     min-height: 100vh; 
     width: 100vw; 
     text-align: center;
+    padding-top: 75px;
 }
 
 /* Header */
@@ -12,31 +13,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
-    height: 100px;
-    /* padding-right: 500px; */
-    background-color: #f8f9fa; /* Color de fondo del header */
-    box-shadow: 0 6px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 60px;
+    background-color: #f8f9fa;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
+    padding: 0 20px;
 }
 
 .header-right {
     display: none;
 }
 
-/* Logo */
 .logo {
     display: flex;
     align-items: center;
-    width: 100vw;
     justify-content: center;
+    height: 100%;
 }
 
 .logo-img {
-    height: 150px;  
+    height: 40px;  
 }
 
 /* Navegación */
@@ -52,7 +52,6 @@
     list-style: none;
     margin: 0;
     padding: 0;
-
 }
 
 .nav-link {
@@ -85,14 +84,21 @@
 }
 
 .btn-start {
-    display: none;
-    padding: 10px 0px;
+    padding: 10px 20px;
     background-color: #ffffff;
     color: #0A437D;
     border: 1px solid #0A437D;
     width: 150px;
     border-radius: 5px;
-    transition: background-color 0.9s ;
+    transition: background-color 0.9s, bottom 0.9s ease;
+    position: fixed;
+    bottom: -50px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.btn-start.show {
+    bottom: 70px;
 }
 
 .btn-start:hover {
@@ -117,16 +123,7 @@
     justify-content: center;
 }
 
-
-#about {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    align-items: center;
-    justify-content: center; 
-}
-
-#contact_us {
+#about, #contact_us {
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -142,8 +139,6 @@ footer {
     padding: 20px;
     border-top: 1px solid #e7e7e7;
     text-align: center;
-    position: fixed; 
-    bottom: 0;
     width: 100%;
 }
 
@@ -166,22 +161,20 @@ footer p {
 
     .logo {
         justify-content: start;
-        width: auto;
     }
 
     .logo-img {
         height: 100px; 
     }
-    .btn-start{
+
+    .btn-start {
         display: inline-block;
+        position: relative;
+        bottom: auto;
+        right: auto;
     }
 
     .navbar {
         display: flex;
     }
-
-    .main-content {
-        width: 100vw;
-    }
-    
 }
